--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-    "name": "ping-pong",
-    "version": "1.0.0",
-    "description": "\"Practising how to use npm\"",
-    "main": "index.js",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/carolwanjohi/Ping-Pong-App.git"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Peter Maina and Carol Wanjohi",
-    "license": "MIT",
-    "dependencies": {},
-    "devDependencies": {
-        "browserify": "^14.4.0",
-        "del": "^3.0.0",
-        "gulp": "^3.9.1",
-        "gulp-concat": "^2.6.1",
-        "gulp-jshint": "^2.0.4",
-        "gulp-uglify": "^3.0.0",
-        "gulp-util": "^3.0.8",
-        "jshint": "^2.9.5",
-        "vinyl-source-stream": "^1.1.0"
-    }
+  "name": "ping-pong",
+  "version": "1.0.0",
+  "description": "\"Practising how to use npm\"",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/carolwanjohi/Ping-Pong-App.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Peter Maina and Carol Wanjohi",
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "bower-files": "^4.0.0",
+    "browser-sync": "^2.18.13",
+    "browserify": "^14.4.0",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.5",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "bugs": {
+    "url": "https://github.com/carolwanjohi/Ping-Pong-App/issues"
+  },
+  "homepage": "https://github.com/carolwanjohi/Ping-Pong-App#readme"
 }
